add filter component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@shared/*" : ["app/shared/*"],
       "@pipes/*": ["app/shared/modules/pipes-module/*"],
       "@services/*": ["app/shared/services/*"],
+      "@modules/*": ["app/modules/*"]
     }
   },
   "angularCompilerOptions": {
